--- a/src/main/resources/locales/ru_RU.yml
+++ b/src/main/resources/locales/ru_RU.yml
@@ -1,5 +1,5 @@
 # Не удалять настройку version.
-version: 1.3
+version: 1.4
 
 messages:
   # Действия:
@@ -7,6 +7,7 @@ messages:
   # [message] сообщение - Отправить сообщение игроку.
   # [broadcast] сообщение - Отправить сообщение всем игрокам.
   # [log] сообщение - Отправить сообщение в консоль.
+  # [delay] тики - Сделать задержку между действиями. В тиках. (20 тиков = 1 секунда)
   # [player] команда - Выполнить команду от имени игрока.
   # [teleport] мир;x;y;z;yaw;pitch;задержка - Телепортировать игрока к указанным координатам. Задержка измеряется в тиках.
   # [console] команда - Выполнить команду от имени консоли.
@@ -34,8 +35,14 @@ messages:
   # %jparkour_maxrights% - Отображает максимальное количество кликов по бомбе.
   #
   # Встроенные плейсхолдеры:
+  # %accuracy% - Отображает точность, которую сделал игрок.
   # %star_win% - Отображает звезды, которые заработал игрок.
   # %star_loss% - Отображает звезды, которые игрок не заработал.
+  # %jparkour_tops_айдиСхематики_Число_name% - Получить имя игрока на определённом месте в топе схематики.
+  # %jparkour_tops_айдиСхематики_Число_accuracy% - Получить точность игрока на определённом месте в топе схематики.
+  # %jparkour_tops_айдиСхематики_Число_time% - Получить точное время топа игрока на определённом месте в топе схематики.
+  #
+  # Измените "айдиСхематики" на айди схематики, и "Число" на топ места, который вам нужен.
   #
   # Информация:
   # Сообщения, отправленные в консоль, могут не заменять плейсхолдеры или выполнять определенные действия выше.
@@ -51,6 +58,8 @@ messages:
       - "[message] &a/jparkour join &f- Создать или присоединиться к любой доступной комнате."
       - "[message] &a/jparkour join roomid &f- Попытаться подключиться к комнате (если она свободна)."
       - "[message] &a/jparkour exit &f- Выйти из игры/очереди."
+      - "[message] &a/jparkour item &f- Получить помощь по подкоманде item."
+      - "[message] &a/jparkour admin &f- Получить помощь по подкоманде admin."
       - "[message] &a/jparkour reload &f- Перезагрузить конфигурацию плагина."
       - ""
     noperm:
@@ -77,15 +86,19 @@ messages:
       left: "&fБлоков разрушено: &e%blocks%/&e%blocks_all%"
       right: "&fБомб отражено: &e%bombs%&f/&e%bombs_all%"
     actions:
+      joined:
+        - "[message] &aВы были подключены к игре: &e%game%"
+      started:
+        - "[message] &eИгра началась."
       ingame:
         - "[message] &cВы в игре!"
       end:
         - "[message] &cИгра окончена."
-      kicked:
-        - "[message] &cИгра окончена."
       restarted:
         - "[message] &aИгра была перезапущена."
+      kicked:
+        - "[message] &cИгра окончена."
       damageHeart:
         - "[message] &c-1 &l♥"
       win:
-        - "[title] &aПобеда;&e%star_win%&7%star_loss%"
+        - "[title] &aПобеда;&e%star_win%&7%star_loss% &f- &e%accuracy%%"
