--- a/src/main/resources/locales/ru_RU.yml
+++ b/src/main/resources/locales/ru_RU.yml
@@ -17,6 +17,8 @@ messages:
   # // Замените $version$ на версию вашего сервера, например: https://helpch.at/docs/1.8.8/org/bukkit/Sound.html
   # [effect] тип;длительность;усилитель;задержка - Дать эффект игроку. Задержка и длительность измеряются в тиках.
   # Найдите типы эффектов здесь: https://helpch.at/docs/$version$/org/bukkit/potion/PotionEffectType.html
+  # [explosion] мощность;установитьОгонь;ломатьБлоки;задержка;добавитьX;добавитьY;добавитьZ - Создать взрыв. Задержка измеряется в тиках.
+  # установитьОгонь, ломатьБлоки - установите false или true. добавитьX, добавитьY, добавитьZ - значения double, которые добавляются к местоположению взрыва игрока.
   # [bossbar] сообщение;цвет;тип;время;стиль;флаг - Отправить полосу босса игроку с сообщением на определенное время. Для 1.9+
   # Типы:
   # stop - Полоса босса исчезнет после указанного времени (в секундах)
@@ -38,11 +40,15 @@ messages:
   # %accuracy% - Отображает точность, которую сделал игрок.
   # %star_win% - Отображает звезды, которые заработал игрок.
   # %star_loss% - Отображает звезды, которые игрок не заработал.
-  # %jparkour_tops_айдиСхематики_Число_name% - Получить имя игрока на определённом месте в топе схематики.
-  # %jparkour_tops_айдиСхематики_Число_accuracy% - Получить точность игрока на определённом месте в топе схематики.
-  # %jparkour_tops_айдиСхематики_Число_time% - Получить точное время топа игрока на определённом месте в топе схематики.
+  # %jparkour_tops_SchematicName_Number_name% - Получает имя игрока, который находится на определенной вершине.
+  # %jparkour_tops_SchematicName_Number_top% - Определяет место игрока в топе.
+  # %jparkour_tops_SchematicName_Number_accuracy% - Определяет точность игрока, который находится на определенной вершине.
+  # %jparkour_tops_SchematicName_Number_time% - Получить точное время завершения для игрока, который находится на определенной вершине.
   #
-  # Измените "айдиСхематики" на айди схематики, и "Число" на топ места, который вам нужен.
+  # Измените "SchematicName" на идентификатор схемы, а "Number" - на нужный вам номер в верхней части списка.
+  # Если вы не знаете позицию игрока в топе, вы можете получить ее, заменив "Number" на "name=игрок".
+  # Введите ник игрока в поле игрок. Примеры: %jparkour_tops_nether_1_top%,
+  # %jparkour_tops_nether_name=Mitriyf_top%, %jparkour_tops_nether_name=%player%_top%.
   #
   # Информация:
   # Сообщения, отправленные в консоль, могут не заменять плейсхолдеры или выполнять определенные действия выше.
@@ -58,7 +64,6 @@ messages:
       - "[message] &a/jparkour join &f- Создать или присоединиться к любой доступной комнате."
       - "[message] &a/jparkour join roomid &f- Попытаться подключиться к комнате (если она свободна)."
       - "[message] &a/jparkour exit &f- Выйти из игры/очереди."
-      - "[message] &a/jparkour item &f- Получить помощь по подкоманде item."
       - "[message] &a/jparkour admin &f- Получить помощь по подкоманде admin."
       - "[message] &a/jparkour reload &f- Перезагрузить конфигурацию плагина."
       - ""
@@ -85,6 +90,8 @@ messages:
       win: "&aПобеда"
       left: "&fБлоков разрушено: &e%blocks%/&e%blocks_all%"
       right: "&fБомб отражено: &e%bombs%&f/&e%bombs_all%"
+    placeholders:
+      notClaimed: "Не занято"
     actions:
       joined:
         - "[message] &aВы были подключены к игре: &e%game%"
@@ -100,5 +107,6 @@ messages:
         - "[message] &cИгра окончена."
       damageHeart:
         - "[message] &c-1 &l♥"
+        - "[explosion] 1"
       win:
-        - "[title] &aПобеда;&e%star_win%&7%star_loss% &f- &e%accuracy%%"
+        - "[title] &aПобеда&r;&e%star_win%&7%star_loss% &f- &e%accuracy%%"
