--- a/src/main/resources/locales/ru_RU.yml
+++ b/src/main/resources/locales/ru_RU.yml
@@ -4,6 +4,9 @@ version: 1.6
 messages:
   # Действия:
   # [actionbar] сообщение - Отправить строку действий с вашим сообщением. Для 1.11+
+  # [connect] сервер - Отправьте игрока на определенный сервер BungeeCord.
+  # ПРЕДУПРЕЖДЕНИЕ: Требуется передача сообщений с помощью BungeeMessaging. Это присутствует в BungeeCord и WaterFall.
+  # На Velocity это может быть отключено по умолчанию. Проверьте конфигурацию вашего прокси-сервера.
   # [message] сообщение - Отправить сообщение игроку.
   # [broadcast] сообщение - Отправить сообщение всем игрокам.
   # [log] сообщение - Отправить сообщение в консоль.
