--- a/src/main/resources/locales/en_US.yml
+++ b/src/main/resources/locales/en_US.yml
@@ -45,8 +45,10 @@ messages:
   #
   # Change "SchematicName" to the schematics' ID, and "Number" to the number in the top that you require.
   # If you don't know the player's position in the top, you can get it by replacing "Number" with "name=PlayerName".
+  # Or if you want to know the position of the person who is watching the placeholder, replace "Number" with "player".
   # Enter the player's nickname in PlayerName. Examples: %jparkour_tops_nether_1_top%,
-  # %jparkour_tops_nether_name=Mitriyf_top%, %jparkour_tops_nether_name=%player%_top%.
+  # %jparkour_tops_nether_name=Mitriyf_accuracy%, %jparkour_tops_nether_name=%player%_time%, %jparkour_tops_nether_player_name%.
+  # Attention! The "name=PlayerName" function may not work well with usernames that contain _
   #
   # Built-in placeholders:
   # %accuracy% - Display the player's execution accuracy.
